[package]
name = "druntime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { verison = "1.0.0", features=["ws", "rustls"] }
tokio = { version = "1.21.2", features=["full"] }
eyre = "0.6"
ethabi = "17.2.0"
anyhow = "1.0.51"
hex = "0.4"
#abi = { git = "https://github.com/SaaS3-Foundation/abi.git" }
abi = { path = "../abi" }
reqwest = { version = "0.11", features = ["json"] }
ethers-signers = { version = "1.0.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
